// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MCAssessment MCAssessment component 1`] = `null`;

exports[`MCAssessment MCAssessment component not shuffled 1`] = `null`;

exports[`MCAssessment MCAssessment component question with no solution page 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onClick={[Function]}
>
  <span
    className="instructions"
  >
    <span>
      Pick the correct answer
    </span>
  </span>
  <div />
</form>
`;

exports[`MCAssessment MCAssessment component question with visible explanation 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onClick={[Function]}
>
  <span
    className="instructions"
  >
    <span>
      Pick the correct answer
    </span>
  </span>
  <div>
    <div
      className="solution"
    >
      <div
        className="score"
      />
      <div
        className="obojobo-draft--components--button alt-action is-not-dangerous align-center"
      >
        <button
          disabled={undefined}
          onClick={[Function]}
          tabIndex={undefined}
        >
          Hide Explanation
        </button>
      </div>
      <div>
        <div
          className="solution-container"
        >
          <div
            className="component obojobo-draft--pages--page"
            data-focussed={false}
            data-id="page-id"
            data-obo-component={true}
            data-type="ObojoboDraft.Pages.Page"
            id="obo-page-id"
          >
            <div
              className="component"
              data-focussed={false}
              data-id="text-id"
              data-obo-component={true}
              data-type="ObojoboDraft.Chunks.Text"
              id="obo-text-id"
            >
              <div
                className="text-chunk obojobo-draft--chunks--single-text pad"
              >
                <span
                  className="text align-left"
                  data-group-index={0}
                  data-indent={0}
                >
                  <span>
                    <span>
                      <span>
                        Example text
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`MCAssessment MCAssessment component review mode 1`] = `null`;

exports[`MCAssessment MCAssessment component with correct response in review mode - multiple-correct 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one-multiple-correct is-mode-review is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onClick={null}
>
  <span
    className="instructions"
  >
    <span>
      Pick one of the correct answers
    </span>
  </span>
  <div
    className="submit-and-result-container"
  >
    <div
      className="result-container"
    >
      <p
        className="result correct"
      >
        mockCorrectLabels
      </p>
    </div>
  </div>
  <div>
    <div
      className="solution"
    >
      <div
        className="score"
      >
        <div
          className="feedback is-not-pick-all-feedback"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment--mc-feedback is-correct-feedback"
            data-choice-label="@"
            data-focussed={false}
            data-id="choice1-feedback"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment.MCFeedback"
            id="obo-choice1-feedback"
          >
            <div
              className="component"
              data-focussed={false}
              data-id="choice1-feedback-text"
              data-obo-component={true}
              data-type="ObojoboDraft.Chunks.Text"
              id="obo-choice1-feedback-text"
            >
              <div
                className="text-chunk obojobo-draft--chunks--single-text pad"
              >
                <span
                  className="text align-left"
                  data-group-index={0}
                  data-indent={0}
                >
                  <span>
                    <span>
                      <span>
                        Example Text 2
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
      >
        <button
          disabled={undefined}
          onClick={[Function]}
          tabIndex={undefined}
        >
          Read an explanation of the answer
        </button>
      </div>
      <div />
    </div>
  </div>
</form>
`;

exports[`MCAssessment MCAssessment component with correct response in review mode 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-review is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onClick={null}
>
  <span
    className="instructions"
  >
    <span>
      Pick the correct answer
    </span>
  </span>
  <div
    className="submit-and-result-container"
  >
    <div
      className="result-container"
    >
      <p
        className="result correct"
      >
        mockCorrectLabels
      </p>
    </div>
  </div>
  <div>
    <div
      className="solution"
    >
      <div
        className="score"
      >
        <div
          className="feedback is-not-pick-all-feedback"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment--mc-feedback is-correct-feedback"
            data-choice-label="@"
            data-focussed={false}
            data-id="choice1-feedback"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment.MCFeedback"
            id="obo-choice1-feedback"
          >
            <div
              className="component"
              data-focussed={false}
              data-id="choice1-feedback-text"
              data-obo-component={true}
              data-type="ObojoboDraft.Chunks.Text"
              id="obo-choice1-feedback-text"
            >
              <div
                className="text-chunk obojobo-draft--chunks--single-text pad"
              >
                <span
                  className="text align-left"
                  data-group-index={0}
                  data-indent={0}
                >
                  <span>
                    <span>
                      <span>
                        Example Text 2
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
      >
        <button
          disabled={undefined}
          onClick={[Function]}
          tabIndex={undefined}
        >
          Read an explanation of the answer
        </button>
      </div>
      <div />
    </div>
  </div>
</form>
`;

exports[`MCAssessment MCAssessment component with feedback in sortedIds 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onClick={[Function]}
>
  <span
    className="instructions"
  >
    <span>
      Pick the correct answer
    </span>
  </span>
  <div
    className="component obojobo-draft--chunks--mc-assessment--mc-choice is-not-selected is-not-correct is-type-unchosen-correctly is-mode-assessment"
    data-choice-label="A"
    data-focussed={false}
    data-id="choice2"
    data-obo-component={true}
    data-type="ObojoboDraft.Chunks.MCAssessment.MCChoice"
    id="obo-choice2"
  >
    <input
      checked={false}
      name="id"
      type="radio"
      value="choice2"
    />
    <div
      className="children"
    >
      <div>
        <div
          className="component obojobo-draft--chunks--mc-assessment--mc-answer"
          data-focussed={false}
          data-id="choice2-answer"
          data-obo-component={true}
          data-type="ObojoboDraft.Chunks.MCAssessment.MCAnswer"
          id="obo-choice2-answer"
        >
          <div
            className="component"
            data-focussed={false}
            data-id="choice1-answer-text"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.Text"
            id="obo-choice1-answer-text"
          >
            <div
              className="text-chunk obojobo-draft--chunks--single-text pad"
            >
              <span
                className="text align-left"
                data-group-index={0}
                data-indent={0}
              >
                <span>
                  <span>
                    <span>
                      Example Text 3
                    </span>
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="component obojobo-draft--chunks--mc-assessment--mc-choice is-not-selected is-correct is-type-could-have-chosen is-mode-assessment"
    data-choice-label="B"
    data-focussed={false}
    data-id="choice1"
    data-obo-component={true}
    data-type="ObojoboDraft.Chunks.MCAssessment.MCChoice"
    id="obo-choice1"
  >
    <input
      checked={false}
      name="id"
      type="radio"
      value="choice1"
    />
    <div
      className="children"
    >
      <div>
        <div
          className="component obojobo-draft--chunks--mc-assessment--mc-answer"
          data-focussed={false}
          data-id="choice1-answer"
          data-obo-component={true}
          data-type="ObojoboDraft.Chunks.MCAssessment.MCAnswer"
          id="obo-choice1-answer"
        >
          <div
            className="component"
            data-focussed={false}
            data-id="choice1-answer-text"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.Text"
            id="obo-choice1-answer-text"
          >
            <div
              className="text-chunk obojobo-draft--chunks--single-text pad"
            >
              <span
                className="text align-left"
                data-group-index={0}
                data-indent={0}
              >
                <span>
                  <span>
                    <span>
                      Example Text
                    </span>
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="solution"
    >
      <div
        className="score"
      />
      <div
        className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
      >
        <button
          disabled={undefined}
          onClick={[Function]}
          tabIndex={undefined}
        >
          Read an explanation of the answer
        </button>
      </div>
      <div />
    </div>
  </div>
</form>
`;

exports[`MCAssessment MCAssessment component with incorrect response in practice mode 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-practice is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onClick={[Function]}
>
  <span
    className="instructions"
  >
    <span>
      Pick the correct answer
    </span>
  </span>
  <div
    className="submit-and-result-container"
  >
    <div
      className="submit"
    >
      <div
        className="obojobo-draft--components--button alt-action is-not-dangerous align-center"
      >
        <button
          disabled={undefined}
          onClick={[Function]}
          tabIndex={undefined}
        >
          Try Again
        </button>
      </div>
    </div>
    <div
      className="result-container"
    >
      <p
        className="result incorrect"
      >
        mockIncorrectLabels
      </p>
    </div>
  </div>
  <div>
    <div
      className="solution"
    >
      <div
        className="score"
      >
        <div
          className="feedback is-not-pick-all-feedback"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment--mc-feedback is-correct-feedback"
            data-choice-label="@"
            data-focussed={false}
            data-id="choice1-feedback"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment.MCFeedback"
            id="obo-choice1-feedback"
          >
            <div
              className="component"
              data-focussed={false}
              data-id="choice1-feedback-text"
              data-obo-component={true}
              data-type="ObojoboDraft.Chunks.Text"
              id="obo-choice1-feedback-text"
            >
              <div
                className="text-chunk obojobo-draft--chunks--single-text pad"
              >
                <span
                  className="text align-left"
                  data-group-index={0}
                  data-indent={0}
                >
                  <span>
                    <span>
                      <span>
                        Example Text 2
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
      >
        <button
          disabled={undefined}
          onClick={[Function]}
          tabIndex={undefined}
        >
          Read an explanation of the answer
        </button>
      </div>
      <div />
    </div>
  </div>
</form>
`;

exports[`MCAssessment MCAssessment component with incorrect response in review mode - pick-all 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-all is-mode-review is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onClick={null}
>
  <span
    className="instructions"
  >
    <span>
      Pick 
      <b>
        all
      </b>
       of the correct answers
    </span>
  </span>
  <div
    className="submit-and-result-container"
  >
    <div
      className="result-container"
    >
      <p
        className="result incorrect"
      >
        mockIncorrectLabels
      </p>
      <span
        className="pick-all-instructions"
      >
        You have either missed some correct answers or selected some incorrect answers
      </span>
    </div>
  </div>
  <div>
    <div
      className="solution"
    >
      <div
        className="score"
      >
        <div
          className="feedback is-pick-all-feedback"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment--mc-feedback is-correct-feedback"
            data-choice-label="@"
            data-focussed={false}
            data-id="choice1-feedback"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment.MCFeedback"
            id="obo-choice1-feedback"
          >
            <div
              className="component"
              data-focussed={false}
              data-id="choice1-feedback-text"
              data-obo-component={true}
              data-type="ObojoboDraft.Chunks.Text"
              id="obo-choice1-feedback-text"
            >
              <div
                className="text-chunk obojobo-draft--chunks--single-text pad"
              >
                <span
                  className="text align-left"
                  data-group-index={0}
                  data-indent={0}
                >
                  <span>
                    <span>
                      <span>
                        Example Text 2
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
      >
        <button
          disabled={undefined}
          onClick={[Function]}
          tabIndex={undefined}
        >
          Read an explanation of the answer
        </button>
      </div>
      <div />
    </div>
  </div>
</form>
`;

exports[`MCAssessment MCAssessment component with incorrect response in review mode 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-review is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onClick={null}
>
  <span
    className="instructions"
  >
    <span>
      Pick the correct answer
    </span>
  </span>
  <div
    className="submit-and-result-container"
  >
    <div
      className="result-container"
    >
      <p
        className="result incorrect"
      >
        mockIncorrectLabels
      </p>
    </div>
  </div>
  <div>
    <div
      className="solution"
    >
      <div
        className="score"
      >
        <div
          className="feedback is-not-pick-all-feedback"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment--mc-feedback is-correct-feedback"
            data-choice-label="@"
            data-focussed={false}
            data-id="choice1-feedback"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment.MCFeedback"
            id="obo-choice1-feedback"
          >
            <div
              className="component"
              data-focussed={false}
              data-id="choice1-feedback-text"
              data-obo-component={true}
              data-type="ObojoboDraft.Chunks.Text"
              id="obo-choice1-feedback-text"
            >
              <div
                className="text-chunk obojobo-draft--chunks--single-text pad"
              >
                <span
                  className="text align-left"
                  data-group-index={0}
                  data-indent={0}
                >
                  <span>
                    <span>
                      <span>
                        Example Text 2
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
      >
        <button
          disabled={undefined}
          onClick={[Function]}
          tabIndex={undefined}
        >
          Read an explanation of the answer
        </button>
      </div>
      <div />
    </div>
  </div>
</form>
`;

exports[`MCAssessment MCAssessment component with inverse sortedIds 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onClick={[Function]}
>
  <span
    className="instructions"
  >
    <span>
      Pick the correct answer
    </span>
  </span>
  <div
    className="component obojobo-draft--chunks--mc-assessment--mc-choice is-not-selected is-not-correct is-type-unchosen-correctly is-mode-assessment"
    data-choice-label="A"
    data-focussed={false}
    data-id="choice2"
    data-obo-component={true}
    data-type="ObojoboDraft.Chunks.MCAssessment.MCChoice"
    id="obo-choice2"
  >
    <input
      checked={false}
      name="id"
      type="radio"
      value="choice2"
    />
    <div
      className="children"
    >
      <div>
        <div
          className="component obojobo-draft--chunks--mc-assessment--mc-answer"
          data-focussed={false}
          data-id="choice2-answer"
          data-obo-component={true}
          data-type="ObojoboDraft.Chunks.MCAssessment.MCAnswer"
          id="obo-choice2-answer"
        >
          <div
            className="component"
            data-focussed={false}
            data-id="choice1-answer-text"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.Text"
            id="obo-choice1-answer-text"
          >
            <div
              className="text-chunk obojobo-draft--chunks--single-text pad"
            >
              <span
                className="text align-left"
                data-group-index={0}
                data-indent={0}
              >
                <span>
                  <span>
                    <span>
                      Example Text 3
                    </span>
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="component obojobo-draft--chunks--mc-assessment--mc-choice is-not-selected is-correct is-type-could-have-chosen is-mode-assessment"
    data-choice-label="B"
    data-focussed={false}
    data-id="choice1"
    data-obo-component={true}
    data-type="ObojoboDraft.Chunks.MCAssessment.MCChoice"
    id="obo-choice1"
  >
    <input
      checked={false}
      name="id"
      type="radio"
      value="choice1"
    />
    <div
      className="children"
    >
      <div>
        <div
          className="component obojobo-draft--chunks--mc-assessment--mc-answer"
          data-focussed={false}
          data-id="choice1-answer"
          data-obo-component={true}
          data-type="ObojoboDraft.Chunks.MCAssessment.MCAnswer"
          id="obo-choice1-answer"
        >
          <div
            className="component"
            data-focussed={false}
            data-id="choice1-answer-text"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.Text"
            id="obo-choice1-answer-text"
          >
            <div
              className="text-chunk obojobo-draft--chunks--single-text pad"
            >
              <span
                className="text align-left"
                data-group-index={0}
                data-indent={0}
              >
                <span>
                  <span>
                    <span>
                      Example Text
                    </span>
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="solution"
    >
      <div
        className="score"
      />
      <div
        className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
      >
        <button
          disabled={undefined}
          onClick={[Function]}
          tabIndex={undefined}
        >
          Read an explanation of the answer
        </button>
      </div>
      <div />
    </div>
  </div>
</form>
`;

exports[`MCAssessment MCAssessment component with labels 1`] = `null`;

exports[`MCAssessment MCAssessment component with multiple responses 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onClick={[Function]}
>
  <span
    className="instructions"
  >
    <span>
      Pick the correct answer
    </span>
  </span>
  <div>
    <div
      className="solution"
    >
      <div
        className="score"
      >
        <div
          className="feedback is-not-pick-all-feedback"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment--mc-feedback is-correct-feedback"
            data-choice-label="@"
            data-focussed={false}
            data-id="choice1-feedback"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment.MCFeedback"
            id="obo-choice1-feedback"
          >
            <div
              className="component"
              data-focussed={false}
              data-id="choice1-feedback-text"
              data-obo-component={true}
              data-type="ObojoboDraft.Chunks.Text"
              id="obo-choice1-feedback-text"
            >
              <div
                className="text-chunk obojobo-draft--chunks--single-text pad"
              >
                <span
                  className="text align-left"
                  data-group-index={0}
                  data-indent={0}
                >
                  <span>
                    <span>
                      <span>
                        Example Text 2
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            className="component obojobo-draft--chunks--mc-assessment--mc-feedback is-not-correct-feedback"
            data-choice-label="@"
            data-focussed={false}
            data-id="choice2-feedback"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment.MCFeedback"
            id="obo-choice2-feedback"
          >
            <div
              className="component"
              data-focussed={false}
              data-id="choice1-feedback-text"
              data-obo-component={true}
              data-type="ObojoboDraft.Chunks.Text"
              id="obo-choice1-feedback-text"
            >
              <div
                className="text-chunk obojobo-draft--chunks--single-text pad"
              >
                <span
                  className="text align-left"
                  data-group-index={0}
                  data-indent={0}
                >
                  <span>
                    <span>
                      <span>
                        Example Text 4
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
      >
        <button
          disabled={undefined}
          onClick={[Function]}
          tabIndex={undefined}
        >
          Read an explanation of the answer
        </button>
      </div>
      <div />
    </div>
  </div>
</form>
`;

exports[`MCAssessment MCAssessment component with one response 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onClick={[Function]}
>
  <span
    className="instructions"
  >
    <span>
      Pick the correct answer
    </span>
  </span>
  <div>
    <div
      className="solution"
    >
      <div
        className="score"
      >
        <div
          className="feedback is-not-pick-all-feedback"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment--mc-feedback is-correct-feedback"
            data-choice-label="@"
            data-focussed={false}
            data-id="choice1-feedback"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment.MCFeedback"
            id="obo-choice1-feedback"
          >
            <div
              className="component"
              data-focussed={false}
              data-id="choice1-feedback-text"
              data-obo-component={true}
              data-type="ObojoboDraft.Chunks.Text"
              id="obo-choice1-feedback-text"
            >
              <div
                className="text-chunk obojobo-draft--chunks--single-text pad"
              >
                <span
                  className="text align-left"
                  data-group-index={0}
                  data-indent={0}
                >
                  <span>
                    <span>
                      <span>
                        Example Text 2
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
      >
        <button
          disabled={undefined}
          onClick={[Function]}
          tabIndex={undefined}
        >
          Read an explanation of the answer
        </button>
      </div>
      <div />
    </div>
  </div>
</form>
`;

exports[`MCAssessment MCAssessment component with one response in practice mode 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-practice is-not-showing-explanation is-not-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onClick={[Function]}
>
  <span
    className="instructions"
  >
    <span>
      Pick the correct answer
    </span>
  </span>
  <div
    className="submit-and-result-container"
  >
    <div
      className="submit"
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center"
      >
        <button
          disabled={undefined}
          onClick={[Function]}
          tabIndex={undefined}
        >
          Check Your Answer
        </button>
      </div>
    </div>
  </div>
  <div />
</form>
`;

exports[`MCAssessment MCAssessment component with sortedIds 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onClick={[Function]}
>
  <span
    className="instructions"
  >
    <span>
      Pick the correct answer
    </span>
  </span>
  <div>
    <div
      className="solution"
    >
      <div
        className="score"
      />
      <div
        className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
      >
        <button
          disabled={undefined}
          onClick={[Function]}
          tabIndex={undefined}
        >
          Read an explanation of the answer
        </button>
      </div>
      <div />
    </div>
  </div>
</form>
`;

exports[`MCAssessment createInstructions builds as expected for pick-all 1`] = `
<span>
  Pick 
  <b>
    all
  </b>
   of the correct answers
</span>
`;

exports[`MCAssessment createInstructions builds as expected for pick-one 1`] = `
<span>
  Pick the correct answer
</span>
`;

exports[`MCAssessment createInstructions builds as expected for pick-one-multiple-correct 1`] = `
<span>
  Pick one of the correct answers
</span>
`;

exports[`MCAssessment renderSubmitFooter builds with retry button 1`] = `
<div
  className="submit"
>
  <Button
    align="center"
    altAction={true}
    disabled={false}
    onClick={[Function]}
    value="Try Again"
  />
</div>
`;

exports[`MCAssessment renderSubmitFooter builds with submit button disabled 1`] = `
<div
  className="submit"
>
  <Button
    align="center"
    disabled={true}
    onClick={[Function]}
    value="Check Your Answer"
  />
</div>
`;

exports[`MCAssessment renderSubmitFooter builds with submit button ensabled 1`] = `
<div
  className="submit"
>
  <Button
    align="center"
    disabled={false}
    onClick={[Function]}
    value="Check Your Answer"
  />
</div>
`;

exports[`MCAssessment renderSubmittedResultsFooter displays correct 1`] = `
<div
  className="result-container"
>
  <p
    className="result correct"
  >
    mockCorrectLabels
  </p>
</div>
`;

exports[`MCAssessment renderSubmittedResultsFooter displays incorrect 1`] = `
<div
  className="result-container"
>
  <p
    className="result incorrect"
  >
    mockIncorrectLabels
  </p>
</div>
`;

exports[`MCAssessment renderSubmittedResultsFooter displays incorrect pick-all 1`] = `
<div
  className="result-container"
>
  <p
    className="result incorrect"
  >
    mockIncorrectLabels
  </p>
  <span
    className="pick-all-instructions"
  >
    You have either missed some correct answers or selected some incorrect answers
  </span>
</div>
`;
